1.Containers-VMs/1.3.Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-hello-world
  labels:
    app: docker-hello-world
spec:
  replicas: 1
  selector:
     matchLabels:
       app: docker-hello-world
  template:
    metadata:
      labels:
        app: docker-hello-world
    spec:
      containers:
      - name: hello-world
        image: crccheck/hello-world
        ports:
        - containerPort: 8000
   

---
apiVersion: v1
kind: Service
metadata:
  name: docker-hello-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    run: docker-hello-world
